change from location to AP Group

--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -33,7 +33,7 @@
                 <div class="span3"></div>
                 <div class="button-actions">
                     <ul>
-                        <li><a style="7px 10px" ng-show="network.is_guest" ng-click="redirect('guest')"><i class="icon-pencil"></i>Edit Location Guest Settings</a>
+                        <li><a style="7px 10px" ng-show="network.is_guest" ng-click="redirect('guest')"><i class="icon-pencil"></i>Edit AP Group Guest Settings</a>
                         </li>
                     </ul>
                 </div>
