--- a/web/src/main/webapp/templates/NewSite.html
+++ b/web/src/main/webapp/templates/NewSite.html
@@ -1,8 +1,8 @@
 <div class="row-fluid page-title">
     <div class="span12">
-        <h1 class="content-title">Create A New Location </h1>
+        <h1 class="content-title">Create A New AP Group </h1>
         <ul class="crumbs">
-            <li class="active"><a style="cursor:pointer;">New Location</a></li>
+            <li class="active"><a style="cursor:pointer;">New AP Group</a></li>
         </ul>
     </div>
 </div>
@@ -19,7 +19,7 @@
                             <div class="field-section">
                                 <div class="control-group" ng-class="form.name.$invalid ? 'error' : ''">
                                     <label for="friendly_name" class="control-label">
-                                        Location name<i class="icon-asterisk required"></i>
+                                        AP Group Name<i class="icon-asterisk required"></i>
                                     </label>
                                     <div class="controls">
                                         <input type="text" id="friendly_name" name="friendly_name" placeholder="Provide a name..." ng-model="site.friendly_name" required>
