[US4711] - Add support for zero handoff

--- a/web/src/main/webapp/templates/AccessPoint.html
+++ b/web/src/main/webapp/templates/AccessPoint.html
@@ -1,9 +1,9 @@
 <div class="row-fluid page-title">
     <div class="span12">
-        <h1 class="content-title">Manage {{name}}</h1>
+        <h1 class="content-title">Manage: {{name}}</h1>
         <ul class="crumbs">
             <li><a href="#/devices">Access Points</a></li>
-            <li><a style="cursor:pointer;">Manage {{name}}</a></li>
+            <li><a style="cursor:pointer;">Manage: {{name}}</a></li>
         </ul>
     </div>
 </div>
