--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -45,7 +45,7 @@
                                     <div class="field-section" ng-show="activeItem=='Details'">
                                         <div class="control-group" ng-class="form.name.$invalid ? 'error' : ''">
                                             <label for="friendly_name" class="control-label">
-                                                Site name<i class="icon-asterisk required"></i>
+                                                Ap Group name<i class="icon-asterisk required"></i>
                                             </label>
                                             <div class="controls">
                                                 <input type="text" id="friendly_name" name="friendly_name" placeholder="Provide a name..." ng-model="site.friendly_name" required>
@@ -65,7 +65,7 @@
                                             <label for="address" class="control-label">Account Number</label>                                            <div class="controls">
                                             <input type="text" id="account" name="account" placeholder="Provide an account number..." ng-model="site.account">
                                         </div>
-                                    </div>-->
+                                    </div>
                                     <div class="control-group">
                                         <label for="address" class="control-label">Address</label>
                                         <div class="controls">
@@ -89,7 +89,7 @@
                                         <div class="controls">
                                             <input type="text" id="zip" name="zip" placeholder="Provide a zip..." ng-model="site.zip">
                                         </div>
-                                    </div>
+                                    </div>-->
                                     <h2 style="font-size: 17px">Access Point SSH Username and Password</h2>
                                     <div class="control-group">
                                         <label for="x_ssh_username" class="control-label">Username</label>
