--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -1,12 +1,12 @@
 <div class="row-fluid page-title">
     <div class="span12">
         <h1 class="content-title">Manage Connected User Devices
-            <span ng-show="accessPoint">For {{accessPoint}}</span>
+            <span ng-show="accessPoint">For: {{accessPoint}}</span>
         </h1>
         <ul class="crumbs">
             <li ng-show="accessPoint"><a href="#/devices">Access Points</a>
             </li>
-            <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage {{accessPoint}}</a>
+            <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage: {{accessPoint}}</a>
             </li>
             <li ng-class="{'first': !accessPoint}"><a style="cursor:pointer;">Connected User Devices</a>
             </li>
